[package]
name = "interaction_center_core"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.10.0", features = ["v7", "macro-diagnostics", "serde"] }
chrono = { version = "0.4.38", features = ["now", "clock", "alloc", "std"] }
postgres = { version = "0.19.8", features = ["with-uuid-1", "with-chrono-0_4"] }
deadpool-postgres = "0.14.0"
actix-web = { version = "4.9.0" }
log = "0.4.22"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = { version = "1.0.127" }
lazy_static = "1.5.0"
